Fix issue https://github.com/dylanhansch/TGCMumble/issues/1
Text editor background and text color updated

--- a/TGCMumble.qss
+++ b/TGCMumble.qss
@@ -772,8 +772,8 @@ QAbstractScrollArea::corner {
 }
 
 #qteRichText, #qptePlainText, #qwMacWarning {
-  color: #dddddd;
-  background-color: #1c1c1c;
+  color: #1c1c1c;
+  background-color: #dddddd;
   border: 1px solid #1c1c1c;
   padding: 4px;
 }
