New toolbar image
Rename logo.png to tgc-logo.png and keep for later use, currently
unused.

--- a/TGCMumble.qss
+++ b/TGCMumble.qss
@@ -17,7 +17,7 @@
 }
 
 #qtIconToolbar{
-	background: url(skin:images/logo.png) no-repeat center right;
+	background: url(skin:images/team-war.png) no-repeat center right;
 }
 
 DockTitleBar {
